[package]
name = "ilyrics"
version = "0.1.0"
edition = "2018"

[dependencies]
bindings = { path = "bindings" }
windows = "0.19.0"
utf16_lit = "2.0.2"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.10.0", features = ["full"] }
lrc = "0.1.6"
html-escape = "0.2.9"
once_cell = "1.8.0"
flexi_logger = "0.18"
log = "0.4"
anyhow = "1.0"
regex = "1.5"

[build-dependencies]
embed-resource = "1.6"
